<resources>
    <string name="app_name">Virtual Particles Dimensions</string>
    <string name="VP_tabName">VP</string>
    <string name="VP_clickToGen">Hold to create particle</string>
    <string name="VPUpgrade_delay">Increase particle lifetime</string>
    <string name="word_cost">cost</string>
    <string name="VPUpgrade_dvn">Decrease divider</string>
    <string name="VPUpgrade_cp">Increase click power</string>
    <string name="VP_div">Divider</string>
    <string name="VP_cp">Click power</string>
    <string name="VP_cd">Division delay</string>
    <string name="word_multiplier">multiplier</string>
    <string name="word_mult">mult.</string>
    <string name="prestige0">RESET the progress for extra CP multiplier</string>
    <string name="prestige0_multiplier">Increase prestige multiplier</string>
    <string name="prestige0_desc">multiplier = (VC / 100) * prestige multiplier + 1</string>
    <string name="CpMlt">Increase extra CP multiplier by 1.2</string>
    <string name="IncreaseGameTickseedMlt">Increase game tickspeed (progression only)</string>
    <string name="BREAK_QPhys">BREAK QUANTUM PHYSICS!\n(price: 200 VC)</string>
    <string name="decrease_VCl_cost">Decrease VCl price multiplier</string>
    <string name="BREAK_QPHYS_toast">You broke quantum physics! Congrats! Now VP division is disabled. Quark phase unlocked!</string>
    <string name="locked_qphys_broken">Locked! Quantum physics is broken!</string>
    <string name="VP_toPhase1Button">Break the law of conservation of energy NOW! (It will destroy this phase FOREVER)</string>
    <string name="VD_tabName">VD</string>
    <string name="dim">Dim</string>
    <string name="dim1">1st Dim</string>
    <string name="dim2">2nd Dim</string>
    <string name="dim3">3rd Dim</string>
    <string name="dim4">4th Dim</string>
    <string name="dim5">5th Dim</string>
    <string name="dim6">6th Dim</string>
    <string name="word_buy">buy</string>
    <string name="word_price">price</string>
    <string name="word_count">count</string>
    <string name="max">max ↓</string>
    <string name="maxButInverted">max ↑</string>
    <string name="tickspeed">tickspeed</string>
    <string name="gameSaved">Game saved!</string>
    <string name="SAVE">save</string>
    <string name="DELETE_SAVE">DELETE SAVE FILE</string>
    <string name="SAVE_DELETED">Save deleted! Auto-save disapled! To cancel, save the game and re-launch app!</string>
    <string name="tt_phase0">At the beginning of the game you have access to only 1 tab besides training - phase 0. You have the number of virtual particles (top left corner) and the number of virtual clusters (top right corner). Clusters are obtained from particles, and the next cluster has a markup of *1.1. \nYou have a big cyan button on the left. Clicking it will give you particles. The button on the right is an increase in force for clusters. Below the 2 buttons - increase the duration of the particles and the divider. When the time expires, the particles are divided by the divider. Even lower is the Prestige button (red button) and to the right of it is the prestige multiplier. Prestige restarts the game from the beginning, but gives a cluster-based bonus. Still below are 2 buttons, the Push Strength Multiplier (left) and the Cluster Markup Reduction (right). \nNext, after getting 200 clusters and reducing the divider to 5, you will unlock a new enhancement, Quantum Physics Breakdown. After buying it the particles will stop disappearing, and you will also get another button - to break the law of conservation of energy. It will block access to this stage of the game, but will give access to the rest.</string>
    <string name="collapse">collapse</string>
    <string name="word_gain">gain</string>
    <string name="collapse_full">collapse and get x</string>
    <string name="clearTheVoid">Clear the void for</string>
    <string name="quarks">quarks</string>
    <string name="quarks_tab">Qu</string>
    <string name="annihilate">Annihilate</string>
    <string name="annihilateVPfor">Annihilate VP for </string>
    <string name="word_get">get</string>
    <string name="tab_auto">Auto</string>
    <string name="autobyer">autobyer</string>
    <string name="offline">While you were offline…</string>
    <string name="Tickspeed_bought">Tickspeed bought</string>
    <string name="word_bought">bought</string>
    <string name="word_close">close</string>
    <string name="off_time">Offline time: </string>
    <string name="tt_dims">Dimensions:\nYou have six dimensions. They all have a amount, a multiplier and a number of purchases.\nThe amount is calculated based on the formula: amount * multiplier of the measurement above. The same formula for calculating the production of virtual particles - game currency. They are produced by the first dimension.\nThe multiplier is calculated by the formula: ((amount / 1e10) * multiplier from collapses) + amount of purchases^3</string>
    <string name="tt_tickspeed">Tickspeed:\nYou have tickspeed upgrade. Its cost is multiplied by 10 for each purchase. Also, each purchase gives an additional multiplier to all measurements. The multipliers add up. Normally it is 0.2 per purchase, but after purchasing the "clear the void" upgrade in the Quarks tab, the multiplier becomes 0.7 per purchase.</string>
    <string name="tt_e">Scientific Notation.\nYou may have noticed that all numbers greater than 10,000,000 are written with an "e". This is scientific notation. The number before e is the mantissa. The number after e is the exponent. If you translate it into normal notation, you get mantissa*(10^exponent). It follows that the exponent is the number of zeros in the number.</string>
    <string name="tt_collapse">Collapse.\nCollapse is a way of obtaining an additional multiplier to the dimensions. When you collapse you lose everything, but you gain a *2 multiplier for the collapse. The multipliers add up. Also, the collapse price is multiplied by 1e50 for each purchase. also, the markup itself is multiplied by 1e5 per purchase.</string>
    <string name="tt_quarks">Quarks.\nIf you have reached 1e100 VP, you can reset your progress to obtain quarks. Number of quarks in annihilation = exponent of virtual particles / 100 (log(VP)/100). Quarks are needed for powerful upgrade.</string>
    <string name="quark_x2mlt">Multiply quarks gain by 2</string>
    <string name="quarksToDimMulti">multiplier for all dimensions based on quarks.</string>
    <string name="ABuyAnnihilateDATA">Qu to annihilate:</string>
    <string name="autoAnnihilator">Autobyer: annihilation</string>
    <string name="annihilateOn">Annihilate on</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>