<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@id/vp_tab_open"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="4dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/SAVE"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vp_tab_open"
        android:text="@string/SAVE"
        />
    <Button
        android:id="@+id/vp_tab_open"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/SAVE"
        app:layout_constraintEnd_toStartOf="@id/tab_VD"
        android:text="@string/VP_tabName"


        />
    <Button
        android:id="@+id/tab_VD"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/vp_tab_open"
        app:layout_constraintEnd_toStartOf="@id/tab_quarks"
        android:text="@string/VD_tabName"
        />
    <Button
        android:id="@+id/tab_quarks"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tab_VD"
        app:layout_constraintEnd_toStartOf="@id/tutorial_tab"
        android:text="@string/quarks_tab"
        />
    <Button
        android:id="@+id/extra"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tab_quarks"
        app:layout_constraintEnd_toStartOf="@id/tutorial_tab"
        android:text="…"
        />
    <Button
        android:id="@+id/tutorial_tab"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="10.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/extra"
        app:layout_constraintEnd_toStartOf="@id/settingsTab"
        android:text="📖"
        />

    <Button
        android:id="@+id/settingsTab"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="🔧"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tutorial_tab" />


</androidx.constraintlayout.widget.ConstraintLayout>