<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Quarks">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/sharp_gradient_square"
                android:backgroundTint="@color/quark_view_top"
                android:id="@+id/quarks_top"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="@id/quarks_top"
                app:layout_constraintEnd_toEndOf="@id/quarks_top"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColor="@color/white"
                android:text="QUARK_COUNT"
                android:gravity="center"
                android:id="@+id/quark_count"
                app:layout_constraintTop_toTopOf="@id/quarks_top"
                app:layout_constraintBottom_toBottomOf="@id/quarks_top"/>
            <Button
                android:id="@+id/clearTheVoid"
                android:layout_width="128dp"
                android:layout_height="75dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/quark_btn"
                android:text="@string/clearTheVoid"
                android:textSize="10dp"
                app:layout_constraintTop_toBottomOf="@id/quarks_top"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/quarkMulti"
                android:layout_width="128dp"
                android:layout_height="75dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/quark_btn_light"
                android:text="@string/quark_x2mlt"
                android:textSize="9dp"
                app:layout_constraintTop_toBottomOf="@id/quarks_top"
                app:layout_constraintStart_toStartOf="parent"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/quarks_to_dimMulti"
                android:layout_width="128dp"
                android:layout_height="75dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/quark_btn_light"
                android:text="@string/quarksToDimMulti"
                android:textSize="8dp"
                app:layout_constraintTop_toBottomOf="@id/quarkMulti"
                app:layout_constraintStart_toStartOf="parent"
                android:textAllCaps="false"
                />






        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>