<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/topSpace"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/centerView"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/VP_count"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:fontFamily="sans-serif"
                android:text="VP count PLACEHOLDER"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/centerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topSpace"


                />

            <TextView
                android:id="@+id/VC_count"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="VC count PLACEHOLDER"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/centerView"
                app:layout_constraintTop_toBottomOf="@id/topSpace" />

            <Button
                android:id="@+id/clickMe_vp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/VP_clickToGen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/centerView"
                app:layout_constraintTop_toBottomOf="@id/VP_cd_display" />

            <Button
                android:id="@+id/clickUpgrade"
                android:layout_width="128dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/dark_cyan0"
                android:text="@string/VPUpgrade_cp"
                app:layout_constraintLeft_toRightOf="@id/centerView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/VP_cd_display" />

            <Button
                android:id="@+id/VP_delayUpgrade"
                android:layout_width="128dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/dark_cyan0"
                android:text="@string/VPUpgrade_delay"
                android:textSize="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/centerView"
                app:layout_constraintTop_toBottomOf="@id/clickMe_vp" />

            <Button
                android:id="@+id/VP_dvnUpgrade"
                android:layout_width="128dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/dark_cyan0"
                android:text="@string/VPUpgrade_dvn"
                android:textSize="10dp"
                app:layout_constraintLeft_toRightOf="@id/centerView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clickMe_vp" />


            <TextView
                android:id="@+id/VP_cd_display"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="VP_cd_placeholder"
                app:layout_constraintEnd_toStartOf="@id/VP_div_display"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/VP_count" />

            <TextView
                android:id="@+id/VP_div_display"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="VP_div_placeholder"
                app:layout_constraintEnd_toStartOf="@id/VP_cp_display"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/VP_cd_display"
                app:layout_constraintTop_toBottomOf="@id/VP_count" />

            <TextView
                android:id="@+id/VP_cp_display"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="VP_cp_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/VP_div_display"
                app:layout_constraintTop_toBottomOf="@id/VP_count" />

            <Button
                android:id="@+id/prestige0"
                android:layout_width="128dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/dark_cyan0"
                android:text="prestige 0 placeholder"
                android:textSize="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/centerView"
                app:layout_constraintTop_toBottomOf="@id/VP_delayUpgrade"
                />
            <Button
                android:id="@+id/VP_brakePhys"
                android:layout_width="128dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/dark_cyan0"
                android:text="BREAK PHYS PLACEHOLDER"
                android:textSize="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prestige0"
                android:layout_marginTop="16dp"/>


            <!--        app:layout_constraintBottom_toTopOf="@+id/dateTextView"-->


            <!--    <TextView-->
            <!--        android:id="@+id/dateTextView"-->
            <!--        android:layout_width="0dp"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="Hello from Fragment"-->
            <!--        android:textSize="28sp"-->
            <!--        app:layout_constraintLeft_toLeftOf="parent"-->
            <!--        app:layout_constraintRight_toRightOf="parent"-->
            <!--        app:layout_constraintTop_toBottomOf="@+id/updateButton" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>